--- a/Task1/myapp/templates/myapp/login.html
+++ b/Task1/myapp/templates/myapp/login.html
@@ -42,7 +42,7 @@
         <div>
             <input type="reset" value="Clear">
             <br>
-            <input type="submit" value="Submit" name="SubmitL">
+            <input type="submit" value="Submit">
             <hr>
             <a class="nav" href="{% url 'register' %}">Signup</a>
         </div>
